--- a/4-自然科学/41-数学/412-数論［整数論］/412.2-代数的整数論：フェルマーの問題，類体論/412.2-代数的整数論：フェルマーの問題，類体論.md
+++ b/4-自然科学/41-数学/412-数論［整数論］/412.2-代数的整数論：フェルマーの問題，類体論/412.2-代数的整数論：フェルマーの問題，類体論.md
@@ -6,3 +6,37 @@
 
 ## 分野の歴史
 
+<!-- 
+アウトライン
+- 1. フェルマーの最終定理の萌芽：17世紀の問題提起と初期の数論的手法
+- 2. 19世紀の代数的整数論の成立：理想論・類数公式の誕生
+- 3. クンマー理想数からデーデキント環へ：整域の構造理解の深化
+- 4. 類体論の黎明：クロネッカーの Jugendtraum とヒルベルト第12問題
+- 5. 類体論の完成：アルティン相互法則と局所・大域の統一
+- 6. イデール・アデールと現代的枠組み：チェボタレフ密度定理から高木・ハッセへ
+- 7. 20世紀後半のコホモロジー的方法：グロタンディークのスキーム論とエタール・コホモロジー
+- 8. フェルマーの最終定理の解決：谷山–志村予想（モジュラー性）の証明過程
+- 9. ラングランズ計画と類体論の一般化：自動表現とガロア表現の橋渡し
+- 10. 現代の展開と未解決問題：岩澤 理論、BSD 予想、p進手法の最前線
+-->
+
+### 1. フェルマーの最終定理の萌芽：17世紀の問題提起と初期の数論的手法
+17世紀のフェルマーはディオファントス『算術』の余白に「$x^n+y^n=z^n$（$n>2$）に整数解なし」と書き付け、無限降下法で $n=4$ を示した。証明未公開の挑発は数学者の想像力を刺激し、ペル方程式を解いたブラウンカー、無限積で $\pi$ を捉えたウォリス、二項係数やベルヌーイ数を研究したパスカルらが整数列・無限級数を扱う手法を発展させた。フェルマーの小定理や二平方和に関する書簡は「合同」「素数判定」の萌芽を含み、後のモジュラー視点を暗示する。18世紀にはオイラーが $n=3,4,5,7$ を処理し、偶数指数は4に、奇数指数は素数指数に帰着する枠組みを与え、フェルマー数の研究で初等手法の限界と可能性を示した。ラグランジュの四平方定理、ルジャンドルの三平方定理、連分数による最良近似は整数論の骨格を整え、ホイヘンスやド・ラ・イールが近似論を天文計算に応用したことで「整数の性質が実用に資する」認識も広がった。ソフィー・ジェルマンは補助素数法を構築し、特定素数での解不存在を示してFLTに重要な前進をもたらし、女性が排除された学界で数論の歴史に名を刻んだ。17〜18世紀はまだ代数的整数もガロア理論も無かったが、明快な未解決方程式が「整数を体系的に理解する理論」を求める動機を与え、後の代数的整数論と類体論へ続く長い物語の起点となった。 フェルマーの書簡は当時の数学者コミュニティに非公開ながら回覧され、バシェやロベルヴァルらが無限降下法を再解釈した。ウォリスの無限積は解析と整数を結ぶ先駆となり、連分数による近似理論がホイヘンスの振り子時計改良に応用された。こうした相互作用が整数論を「純粋と応用の交差点」として位置付け、19世紀の厳密化を待つ土壌を作った。 印刷技術の未発達ゆえ証明が共有されず、口伝と書簡の文化が方法論の多様化を生んだことも重要である。フェルマーの無限降下は後にモーデル法や高さ理論の原型として再登場し、算術的幾何の思想を先取りしていたと評価される。 ルジャンドルやラグランジュが合同算術を整えたことで19世紀の形式化が可能になり、ガウスの『算術研究』はこの萌芽を受け止めて開花させたという歴史的連続性がある。 さらにベルナールやテオフラストが無限降下を他分野に応用し、方法そのものが数学的技法として定着したことも見逃せない。 
+### 2. 19世紀の代数的整数論の成立：理想論・類数公式の誕生
+1801年、ガウス『算術研究』は二次形式の合成則と相互法則を体系化し、類数 $h$ を導入して複素二次体の整数環を構造的に理解する道筋を示した。ディリクレは $L$ 関数を用いて単数定理を証明し、単数群が有限生成で階数が $r_1+r_2-1$ に等しいことを示して解析と代数を橋渡しした。リーマンはゼータ関数の解析接続と機能方程式を提示し、零点と素数分布の関係を明らかにする視座を与える。ヤコビ・アーベルの楕円関数論は複素乗法論とモジュラー形式の原型となり、エイゼンシュタイン級数や楕円積分の変換公式が類体論の解析的道具となった。クンマーは円分体で一意分解の破れを発見し、理想数と正則素数の概念を導入してFLTを類数問題に翻訳した。ベルヌーイ数と類数の関係が見出され、正則・不正則の分類が類数と結び付く。クロネッカーの「青年の夢」は楕円関数の特異値で虚二次体の最大アーベル拡大を生成するビジョンを描き、ミンコフスキーは格子幾何を用いて類数の有限性と判別式下界を与え、代数的整数論に幾何的直観を持ち込んだ。デーデキント（デデキント）は $\zeta_K(s)$ を定義し、極・留数が類数や単数を与えることを明示して代数体の解析数論を確立、19世紀の成果が類体論の土台を固めた。 ディリクレは指標群の概念を導入し、原始ディリクレ指標でL関数を構成、算術級数に素数が無限に存在することを証明した。類数公式は判別式・ユニット・レギュレータを結ぶ最初の橋であり、解析的情報が代数的不変量を決めることを示した。さらにチェビシェフやアダマールの結果を先取りする素数分布の予感が芽生え、解析数論の前史を彩った。 シュティルチェスやデーデキント・ヘルゴッツによる類数公式は、解析接続したL関数の正則値が類数を与えることを明確化した。クラムやチェビシェフは素数計数関数に境界を与え、素イデアル分布への関心が高まる。数表計算の精緻化により類数と判別式の対応が実験的に確かめられ、理論と計算が相互強化した。 クンマーはベルヌーイ数に対する合同（クンマー合同式）を見出し、p進L値の先駆となった。デーデキントは二次互反をイデアルで再解釈し、互反則が環の構造から自然に現れることを示した。 クンマーの円分体研究はp進L関数の萌芽を含み、後の岩澤理論で再解釈されることになる。 
+### 3. クンマー理想数からデーデキント環へ：整域の構造理解の深化
+クンマーは円分体で一意分解が破れる事実に直面し、理想数を導入して補修した。これにより正則素数ではFLTが成立することを示し、不正則素数が類数の分母に現れることから類数との深い結びつきが明らかになった。デーデキントは1871年、代数体の整数環がネーター整域・整閉・次元1であり、非零イデアルが素イデアルに唯一分解することを証明し「デーデキント環」を確立、ゼータ関数のオイラー積で素イデアルの原子的役割を解析的に示した。ヒルベルトは分岐指数・慣性度を体系化し、クルル（Krull）は分解群・慣性群をガロア群の部分群として定式化、アルティンはスティックバーガー元でクラス群を研究し、イデアルを通じてガロア群を読む方法を整備した。ミンコフスキーの幾何は判別式下界と類数有限性を保証し、フルトヴェングラーはヒルベルトクラス体の存在を示してクラス群有限性を最大無分岐アーベル拡大と結び付けた。エミー・ネーターはイデアル有限生成性を公理化し、アルティン・チェボタレフは素イデアル分布を共役類で記述する密度定理へ進んだ。整域の構造理解は解析・群論と融合し、後の類体論を支える強固な基盤が築かれた。 デーデキント切断による実数の構成は「体の完備化」の概念を与え、後のp進数構成と対をなす。クラス群の有限性を与えるミンコフスキーの界は具体的計算を可能にし、19世紀末には類数表が作られ計算機のない時代に膨大な手計算が行われた。ヒルベルトの Zahlbericht は当時知られていた代数的整数論を統一した百科事典であり、理想の言語が国際的に共有される契機となった。 ネーターは整域の概念を自由加群・有限生成という代数的性質に還元し、ネーター正規化が局所環の扱いを容易にした。クルル（Krull）次元の導入は素イデアル鎖の長さで幾何的次元を測る枠組みを与え、局所化と完備化が素イデアル分解を局所的に検証する標準手続きとなった。局所体の形式的導入は後の局所類体論を準備し、p進数体・実数体が同列に扱われる道を開いた。 ヘンゼルは1897年にp進数を導入し、局所環の完備化が代数方程式の根を安定に扱う強力な道具となることを示した。局所クラスフィールド論の種はこの時点で既に蒔かれていた。 1900年代初頭にはオストロフスキーの定理が体の絶対値を分類し、整数論で扱う局所体が実数・p進数に限られることが明確になった。 
+### 4. 類体論の黎明：クロネッカーの夢とヒルベルト第12問題
+クロネッカーは「青年の夢」で虚二次体の最大アーベル拡大が楕円関数の特異値で生成されると予想し、明示的類体論のビジョンを提示した。ヒルベルトはこれを第12問題として一般化し、「任意の代数体の最大アーベル拡大を解析的数で記述せよ」と課題を拡張する。複素乗法論は虚二次体に完全な解答を与え、$j$ 不変量やフリッケ（Fricke）特異値（フリッケ不変量）がヒルベルトクラス体を生成するが、実二次体・高次体では対応する特異値が見つからず未解決のまま残った。ハッセは局所体の理論を整備し、分岐・慣性・分解を局所的に理解する枠組みを提供し、フルトヴェングラーはヒルベルトクラス体の存在を証明してクロネッカーの夢を部分的に実現した。関数体ではドリンフェルトとヘイズがモジュールの特殊値で最大アーベル拡大を生成することを示し、「複素乗法の関数体版」を完成させる。スタークの予想は $L$ 関数導関数の指数がアーベル拡大を与えると予想し、スターク単数・新谷単数・p進多重対数など具体的生成元探索を促した。明示的類体論は未解決ながら、解析的生成元の探索と抽象的特徴付けの二つの流れが21世紀まで並走し続けている。 ヒルベルトは第9・第10問題でも代数体の単数や方程式解可能性を問うなど、類体論的課題を並列して掲げた。ヴェーバーは円分体や虚二次体の具体的類体生成式を計算し、デーデキントの理論を数表化した。フルヴィッツはローラン級数を用いて複素乗法の計算を実効化し、クラス不変量の高精度数値計算が20世紀初頭に既に行われていた。これらの積み重ねが抽象理論だけでなく具体計算を重視する類体論の文化を形成した。 ヒルベルトは第9・第10問題でも単数とディオファントス方程式を取り上げ、類体論的課題を多方面から示唆した。ヴェーバーやヴェーバー–デーデキントは円分体や虚二次体の類体生成を表で計算し、フルヴィッツはローラン級数を用いて複素乗法の計算を実効化した。明示的生成元を巡るこれらの数値的努力が後の超越的手法（ベーカーの線形形式）や超楕円曲線のCM法に継承された。 スタークは後に虚二次体のヒルベルトクラス体をヘッケL関数の導関数で与える公式を提示し、第12問題の部分的解として注目された。現在の『スターク単数』の源流である。 実数体への拡張を目指す研究はベーカーの線形形式の理論やベッソンの楕円対数などへつながり、数体全体への明示的生成を探る動機となった。 
+### 5. 類体論の完成：高木の存在定理とアルティン相互法則
+1920年代、高木がイデアル類群の指数条件から有限アーベル拡大の存在を示し、大域類体論を完成させた。アルティンはフロベニウス自己同型を用い、未分岐素の分解をガロア群の共役類に対応づける相互法則を確立し、素分解とガロア群が双対であることを明示した。ハッセは局所体で相互法則・ノルム定理を証明し、局所‐大域原理を明確化。チェボタレフ密度定理は任意の共役類が正の密度で現れることを保証し、アルティン $L$ 関数と結び付けて素分布を記述する道具となった。シュヴァレーや井草準一が純代数的手法で存在定理を再証明し、テイト・中山双対がクラス群とBrauer群を結んだ。岩澤は円分体タワーでクラス群の $p$ 進挙動を解析し、無限拡大への一般化を開始した。こうして「アーベル拡大＝イデアル（イデール）類群の開指数部分群」という同型と相互写像が確立し、類体論は完成形に達する。 アルティンはL関数の解析接続と機能方程式を予想し、チェボタレフ密度定理の証明がクラス形成の理論に取り込まれた。ハッセは局所相互法則をHilbert記号で表し、局所大域原理が二次形式や代数群にも拡張される。高木の証明はクラス形成(class formation)の概念に書き換えられ、後にのちのコホモロジー的類体論の形式的枠組みを与えた。計算面ではクロネッカー–ヴェーバーの定理が円分拡大の全てを与えることが確認され、実効的な類体構成のモデルとなった。 ブラウアーはクラス形成の概念を抽象化し、H^2のコホモロジーとして相互法則を捉え直した。シャファレヴィッチはすべての有限可解拡大がアーベルタワーに埋まることを示し、高木理論の拡張を視野に入れた。局所クラスフィールドではヘンゼル補題とリフト技法によりヒルベルト記号の計算が実効化され、電算機導入以前から手計算での類体構成が行われた。 ヘッケはイデール前夜に指標付き級数でL関数を一般化し、アーベル拡大とフロベニウス自己同型の対応を解析的に追跡した。その流れがアルティンL関数の枠組みを強化し、後のチェボタレフ証明に繋がる。 アルティンの正則性予想の部分結果やブラウアー–ヒッセンブルフのL関数代数化は、クラス形成を超える非可換拡張への布石となった。 
+### 6. イデール・アデールと現代的枠組み：チェボタレフ密度定理から高木・ハッセへ
+イデールは各局所体の単数群の制限付き直積、アデール環は全完備化の直積であり、局所データを束ねる舞台を提供する。高木存在定理はイデール類群 $C_K=\mathbb{A}_K^\times/K^\times$ の開指数部分群と有限アーベル拡大のガロア群が同型になる形に書き換えられ、アルティン相互法則は全体の相互写像 $\theta:C_K\to\mathrm{Gal}(K^{ab}/K)$ として統一された。ハッセのノルム定理は局所ノルム条件で大域ノルム像を特徴付け、テイトはアデール上のフーリエ解析でヘッケ $L$ 関数の機能方程式を簡潔に示した。ヴェイユはポアソン和公式を用いてゼータ・$L$ 関数の解析性を統一的に扱い、セルバーグのトレース公式はアデール表現論の中核となった。イデール・アデールは計算手段であると同時にラングランズ計画や岩澤理論の標準言語として定着し、p進ラングランズやミクロローカル解析にも不可欠な装置となっている。 テイトのテーゼはアデール上のフーリエ解析によりヘッケL関数の機能方程式と有限性を一本化し、解析的類体論の教科書的手本となった。ヴェイユの明示公式はゼータの零点分布と素イデアル分布を結ぶ近代的形を与え、イデール視点が解析数論の主流に入った。シュヴァレーはイデール類群を用いた短い相互法則の証明を与え、計算可能性と抽象性を両立させた。 強近似やタマガワ数の理論ではアデールが自然言語となり、代数群の測度論が数論的量と結び付いた。ブルハルトやプラシャドはイデール類群のコンパクト性を利用し、ゼータの零点や平均値定理をアデール上の調和解析に翻訳した。こうしてイデールは『数論版フーリエ解析』の舞台となり、表現論との橋渡しが加速する。 イデール類群がコンパクトであることは強近似やタマガワ数1の定理の基盤となり、スムーズな測度論を可能にした。アデール上の表現はグローバルと局所のテンソル積で記述でき、局所情報の組み立てが透明になった。 チェボタレフ密度定理のアデール的証明は素イデアルの分布を調和解析で捉える典型例となり、解析数論との橋渡しを強めた。 自動形式のスペクトル分解はアデール上で最も自然に書け、クラス群は一次元表現の集合として再現される。大域表現論の言語が確立したことで、後のLanglands対応を述べる舞台が整った。
+### 7. 20世紀後半のコホモロジー的方法：グロタンディークのスキーム論とエタール・コホモロジー
+1950〜60年代、グロタンディークはスキーム論を導入し、数体を一次元スキームとして扱う視点を与えた。エタール・コホモロジーは局所系を通じてガロア表現と幾何情報を結び、クンマー理論や局所類体論を長完全列として再解釈する。スキームのアーベル基本群が類体論を与えることで「幾何化された類体論」が成立し、ブラウアー群とクラス群の双対（ポワトゥ＝タテ（Poitou–Tate）双対）がコホモロジーで統一された。ドリーニュは重みとリジッドスキームを用いてヴェイユ予想を解決し、チェボタレフ密度定理をトレース公式として読み替えた。SGAで整備された六つの操作やトレースの形式はL関数の解析性を幾何のトレースとして理解する道を開き、以後p進ホッジ理論、モチーフ、代数K理論などが流入してコホモロジー的方法が代数的整数論の標準装備となった。さらに高次基本群やスタックへの拡張が試みられ、類体論の思想は高次・非可換の設定へ押し広げられている。 SGA4・SGA5で開発された六つの操作、ベースチェンジ、グロタンディーク双対は、L関数の特殊値やトレース公式をコホモロジーで扱う統一言語となった。Bloch–Kato予想やBeilinson予想はモチーフのL関数の特殊値とコホモロジーの比較を主張し、類体論を越えた高次の相互法則を示唆する。エタール・コホモロジーのt-構造や近接層は分岐を几帳面にコントロールし、局所成分の情報を大域に組み上げる技術として定着した。 グロタンディーク双対とArtin–Verdier双対は、局所・大域の情報をコホモロジーのペアリングで結ぶ強力な枠組みを提供した。エタールサイトの導入は分岐を制御しつつ連続性を保持する場を与え、torsion係数のコホモロジーがクラス群やBrauer群を再現することを示した。Bloch–Ogusスペクトラル系列やGersten複体は高次K理論と類体論的現象を結び付け、より高次の相互法則の可能性を示唆する。 ドリーニュは重み理論を用いてL関数の局所因子の純性を示し、局所モノドロミーと零点の位置を結び付けた。これによりL関数の解析性が幾何学的事実として理解されるようになった。 エタール基本群の遅延性や（発音は同じ）を用いるハルトークスの現象のアナロジーが探究され、高次の分岐構造をコホモロジーで解析する試みが進んだ。 
+### 8. フェルマーの最終定理の解決：谷山–志村予想（モジュラー性）の証明過程
+フライは仮想反例から得られる楕円曲線がモジュラーでないはずだと指摘し、リベットが「フライ曲線がモジュラーならFLTが真」を証明して橋を架けた。ワイルズはテイラー＝ワイルズ法で半安定楕円曲線のモジュラー性を示し（1994）、修正版とテイラーの補足でモジュラー性定理が完成、FLTは解決した。変形理論、イデール的ヘッケ代数、局所退化の貼り合わせ、レベル落としなど類体論由来の技術が総動員され、ガロア表現と自動表現の対応が具体例で実現した。以後ブリュイユ＝コンラッド＝ダイアモンド＝テイラーの改良やスキナー‐ワイルズの普遍変形が進み、モジュラー性はより一般の楕円曲線・ガロア表現へ拡張された。FLTは難問解決にとどまらず、ラングランズ計画の実効性を示す実験結果となった。 リベットのレベル落としはイプシロン予想の成果であり、ガロア表現の局所挙動がモジュラー形式のレベルにどう反映されるかを精密に示した。モジュラー曲線の整数モデル、Néronモデルの特異繊維解析、フルトヴェングラーのアイゼンシュタイン理論などが随所で使われ、p進Hida理論が欠損次元の穴を埋めた。ワイルズの証明後、ブルイユ・コンラッド・ダイアモンド・テイラーが技法を簡潔化し、一般の加群や平坦変形を扱える形に整備した。 リベットのレベル落としはイプシロン予想の成果で、局所ガロア表現の導手とモジュラー形式のレベルの一致を精密に示した。モジュラー曲線の整数モデルやNéronモデルの特異繊維解析が補助として用いられ、p進Hida理論・Coleman理論が変形空間を滑らかにする役割を果たした。ワイルズの後、ブルイユ・コンラッド・ダイアモンド・テイラーが技法を簡潔化し、p進平坦変形環を体系化、セール予想の証明にも道を開いた。 フォンテーヌ=マズール予想は、ガロア表現が幾何起源であればモジュラーであるべきだと主張し、FLT後の研究を方向付けた。セール予想の証明も同じ技法を拡張したもので、モジュラー性が数論の中心原理になった。 フォンテーヌ=マズール予想やSerre予想が「幾何起源のガロア表現は自動的にモジュラー」という指針を示し、Wiles後の研究を方向付けた。 その後のモジュラー性持ち上げ定理（Diamond–Taylor、Kisin、Calegari–Geraghty）はFLＴ技法を一般化し、極小でない場合や局所条件が複雑な場合にも適用可能となった。ABC予想やSzpiro予想との関連も改めて議論され、FLT解決が数論の核心テーマに連鎖的波及をもたらした。
+### 9. ラングランズ計画と類体論の一般化：自動表現とガロア表現の橋渡し
+ラングランズ計画は還元群に対するガロア表現と自動表現の対応、L関数の一致、ファンクトリアリティ（Functoriality）（標準表記）を予想し、類体論を可換部分として含む。ドリンフェルト／ラフォルグは関数体版GL(r)の大域Langlandsを証明し、ハリス–テイラーは局所Langlands(GL(n))を$l$進等価で確立、アーサー＝モクはアーサー＝モーク分類（アーサー=モーク分類）で古典群の自動表現を整理した。安定トレース公式の完成、基底変換・持ち上げの具体例、シムラ多様体の算術モノドロミーなどが進み、非可換類体論が具体化している。フォンテーヌのp進ホッジ理論、ラフォルグのp進Langlands、ユニタリ・シンプレクティック群での自動化結果が積み重なり、類体論の思想がより広い群へ拡張されつつある。「ガロア群の線形化」という類体論的アイデアは、ラングランズ対応の言語で再解釈されている。 基底変換(Borel–Jacquet、ラングランズ)やシムラ（志村）多様体の自動表現から得る自動持ち上げは、具体的ファンクトリアリティ（Functoriality）（標準表記）の実例を提供する。Ngoが基本補題を証明したことで安定トレース公式の応用範囲が一気に広がり、エンドスコピー（endoscopy）を通じて多くの還元群でLanglands予想が前進した。Potential automorphy やモチーフの自動化 (Clozel–Harris–Taylor) など、類体論的手法と幾何が結び付いた成果が相次いでいる。 基底変換や安定トレース公式が具体的ファンクトリアリティ（Functoriality）（標準表記）の実例を提供し、Ngoが基本補題を証明したことでエンドスコピー（endoscopy）の応用範囲が拡大した。Potential automorphy を用いてモチーフの自動表現化が進み、Galois表現の半単純化が自動側に反映されることが次々に確認された。p進Langlands(GL(2,Q_p)) の進展は局所‐大域整合性をp進的にも実現し、非可換類体論の局所像を具体化している。 ベイリンソン–ドラフルドの幾何Langlandsは関数体上でのラングランズ対応を層の言葉で記述し、Fargues–Scholzeの先鋭空間は数体版の幾何化を目指す。アーベル類体論の幾何化が非可換へ拡張される形となっている。 p進LanglandsではEmerton–Geeのpatched eigenvarietyやColmezのGL(2)分類が局所理論を具体化し、大域対応との整合性確認が急速に進んでいる。 
+### 10. 現代の展開と未解決問題：岩澤 理論、BSD 予想、p進手法の最前線
+岩澤理論は可換タワーから非可換タワーへ拡張され、Euler系・Kolyvagin系でSelmer群を制御し、Mazur–Wiles、Kato、Skinner–Urbanらがメイン予想を多くの場合で証明した。BSD予想は楕円曲線の階数とL関数の零の次数を結び付けるが一般解決は遠く、p進L関数、サイクロトミック拡大、Beilinson–Kato要素、高さ理論が交錯する。Fargues–Scholzeの先鋭空間は局所Langlandsを幾何化し、Condensed mathematics はアデール・イデールを再基礎付けする試みとして進む。暗号ではクラス群計算やIDEAL-LWEの安全性評価に類体論が関与し、量子計算時代の耐性が検討される。ヒルベルト第12問題の一般解、スタークの予想の完全証明、非可換類体論の明示的構成、BSD予想の決着など、類体論起源の未解決問題は数論の中心に残り続けている。 非可換岩澤理論ではp進群環上のメイン予想が提起され、Coates–Fukaya–KatoやVenjakobの理論がSelmer群を多変数で捉える。ETNC（同値化Tamagawa数予想）やBrumer–Stark予想、Rubin–Stark単数の実効計算が進み、explicit reciprocity lawがp進ホッジ理論と結び付く。暗号分野ではクラス群計算、ハッシュ関数設計、IDEAL-LWEの安全性が類体論の構造に依存し、量子耐性評価が重要テーマとなっている。並行してクラス体計算のアルゴリズム（CM法、p進近似）が高速化し、純粋理論と計算応用が密接に往復する状況が続く。 非可換岩澤のメイン予想はp進群環上の characteristic element とSelmer群のファイト次元を対応させ、Coates–Fukaya–Kato・Venjakobらが理論を整備した。ETNCやBrumer–Starkの枠組みではL関数の特殊値と規格化された指標類が等しいと期待され、explicit reciprocity law がp進ホッジ理論やColeman積分と結び付く。量子計算時代にはクラス群を巡るアルゴリズム的脅威が議論され、格子暗号の安全性評価が類体論的視点で再検討されている。 コールマン=マズールの固有値曲線やeigencurveはp進モジュラー形式を族として捉え、岩澤理論とモジュラー性を架橋する。p進BSDやキンボール・ポリシンスキーの結果など、p進手法が未解決問題の核心に迫りつつある。 
