--- a/0-総記/01-図書館．図書館情報学/014-情報資源の収集・組織化・保存/014.4-主題索引法：分類法，件名標目法，主題分析/014.4-主題索引法：分類法，件名標目法，主題分析.md
+++ b/0-総記/01-図書館．図書館情報学/014-情報資源の収集・組織化・保存/014.4-主題索引法：分類法，件名標目法，主題分析/014.4-主題索引法：分類法，件名標目法，主題分析.md
@@ -10,3 +10,75 @@
 
 ## 分野の歴史
 
+<!-- 
+アウトライン
+- 1. 主題索引の原型：古代〜近世の蔵書管理（棚・目録・学問分類）と「主題で探す」発想の萌芽
+- 2. 近代分類法の成立：図書館の大衆化・規模拡大を背景に、DDC/LCC/UDCなどが「全体秩序」を与えたこと
+- 3. 件名標目の登場：カード目録とともに、Cutter以降の標目法・LCSHなどが「語で探す」入口を整備した過程
+- 4. 主題分析の理論化：主題を分解し再構成する考え方（分析・合成、ファセット、Ranganathanなど）が索引の精度を押し上げたこと
+- 5. 統制語彙とシソーラス：同義語・上位下位・関連の関係を設計し、専門分野（例：MeSH）で検索の一貫性を実現した流れ
+- 6. 戦後の情報爆発と座標索引：抄録・索引誌、Uniterm/KWIC等、分類中心から「語の組合せで探す」発想へ拡張したこと
+- 7. 機械可読目録とOPAC：MARC化・典拠コントロール・オンライン検索の普及で、分類記号と件名の役割分担が再設計されたこと
+- 8. 日本の主題索引の展開：NDC改訂史、国立国会図書館件名標目表（NDLSH）等の整備、翻訳・外来概念の受容とローカル実務の形成
+- 9. デジタル化と相互運用：Dublin Coreなどのメタデータ、クロスウォーク、Linked Data/BIBFRAMEで「体系」と「語彙」を接続した現在
+- 10. 自動主題付与とAI：統計・機械学習・LLMによる主題推定の可能性と、品質評価・説明可能性・バイアス/検閲の課題
+-->
+
+### 1. 主題索引の原型：配架・目録・学問分類からの出発
+「主題索引法」という言葉が生まれる以前から、人は知識を主題で束ねてきた。古代の文書館や寺院の蔵書管理では、巻物や写本を物理的に保管するだけでなく、用途や学問領域に応じて置き場を分け、必要なものへ辿り着けるようにした。ここで重要だったのは、資料の「内容」を、ある程度のまとまり（宗教、法、医学、詩作など）に割り付ける発想である。近世になると印刷物が増え、書誌目録や書店目録が整備される。編者は主題別の配列と、著者名・書名の索引を組み合わせ、利用者が「何について書かれているか」から探し、さらに「誰が書いたか」へと行き来できる道筋を作った。主題で探す入口は、最初から一つの方式に固定されていたのではなく、配架（棚の並べ方）・目録（一覧）・索引（入口）を織り合わせながら育ったのである。
+また、学問分類の伝統は、図書館の整理と切り離せない。学問の枠組み（哲学・神学・法学…）は、資料を並べる秩序として機能し、その秩序を目録や索引へ写し取ることで、主題アクセスが形を持つようになった。主題索引法の歴史は、情報の増大に対して「秩序を与える」試みと、「入口を増やす」試みが交互に強化されていく過程として始まる。
+さらに、初期の主題別目録が扱っていた「主題」は、学問領域の大枠に近かった。ところが、出版物が増えるにつれ、利用者の関心はより細かな話題や論点へ向かう。すると、分類は「体系としての安定」を優先する一方で、索引は「問いの多様さ」を受け止める役割を担うようになる。主題索引は、学問体系の写像であると同時に、利用者の問いを受け止める窓口でもあるという二面性を、早い段階から抱えていた。この二面性が、後に分類法・件名標目法・主題分析がそれぞれの長所を伸ばし、補い合う理由になっていく。
+また、主題で知を束ねる営みは、図書館の外側でも発達した。百科事典や総合書誌、学術雑誌の索引、学会や研究機関が作る抄録集は、散在する知を主題でまとめ、学びや研究の道筋を示す役割を担った。こうした「二次資料」の経験は、後に図書館の目録や索引へ流れ込み、主題索引が単なる館内作業ではなく、社会全体の知識流通を支える技術であるという意識を強める。主題索引法の歴史は、資料の増加に追いつくための工夫であると同時に、知識の共有を成立させるための公共的な設計でもある。
+
+### 2. 近代分類法の成立：図書館の大衆化と「全体秩序」の必要
+19世紀後半、公共図書館の発展と大学・研究機関の拡大によって、蔵書の規模と多様性は飛躍した。棚に置ける量が増えるほど、資料は「ある程度の規則」で並んでいなければ、見つからない。そこで登場したのが、近代的な一般分類表である。デューイ十進分類法（DDC）は十進法で知識全体を配列し、主題を階層で表せるようにした。米国議会図書館分類法（LCC）は大規模研究図書館の実務に合わせた体系として発達し、国際十進分類法（UDC）は分類記号を拡張しやすいように設計され、複合主題にも対応しようとした。
+分類法は、単に「棚の住所」を決める技術ではない。分類記号は、主題の位置づけを表す短い記号であり、同じ領域の資料を近接させ、利用者に「周辺の関連資料」を見せる力を持つ。つまり分類は、ブラウジング（棚を見て探す）という人間の行動に支えられた主題索引であり、後のオンライン検索時代になっても、知識の地図として参照され続ける。一般分類表や専門分類表、分類規程（分類作業の手順や判断基準を定める規則類）は、こうした分類を「標準化」し、運用可能にするために生まれた制度と技術の積み重ねである。
+ただし分類表は、社会が何を中心的な知として扱うかという「世界観」を内包する。新しい学際分野が生まれると、どこに置くかが争点となり、古い分野の境界が揺らぐと改訂が必要になる。さらに、列挙型の分類表は、細目を増やすほど表は厚くなり、運用の負担も増える。逆に、抽象的にしすぎれば、利用者は棚で迷う。分類法は、安定と更新、細分と見通し、全国的な共通性と館ごとの事情の間で揺れ動きながら、主題アクセスの基盤として成熟していった。そして、特殊資料（地図・楽譜・視聴覚資料・電子資料など）を分類体系の中でどう位置づけるかという問題は、分類の射程を広げる継続的な課題になっていく。
+
+### 3. 件名標目の登場：カード目録と「語で探す」入口の整備
+分類が知識全体の秩序を与える一方で、利用者の探し方は「分類表のどこか」を知っているとは限らない。そこで、自然言語に近い語で主題へ入る入口として発達したのが件名標目（subject heading）である。カード目録の普及は、著者・書名・件名という複数の入口を同時に提供し、同じ資料を異なる観点から引けるようにした。ここで問題になるのが、同じ概念を指す語が複数あること、逆に同じ語が複数の意味を持つことである。件名標目法は、語形をそろえ、参照（○○を見よ）や関連参照（○○も見よ）を設けて、利用者の言葉を統制語へ導く。
+米国では米国議会図書館件名標目表（LCSH）が代表例となり、図書館界全体で語彙を共有する基盤になった。件名標目表は、主題を「語の列」として表すため、分類よりも利用者の言語感覚に近い。しかしその一方で、どの語を付けるか、どの粒度で付けるかという判断は、人間の主題分析に依存する。件名標目が成熟するほど、「語の標準化」と「内容把握」の両輪が求められ、主題索引は分類だけでも自由語だけでも成り立たないことが明確になっていった。
+件名標目が「語の列」として発達したのは、単語一つでは表せない主題が多いからである。典型的には、主題語に地理区分、時代区分、形式区分などを組み合わせて、検索の入口を細かく調整する。これは事前結合（pre-coordinate）の発想で、目録作成時に「想定される問い」をあらかじめ組み立てておく。その利点は、索引語が秩序立って並び、利用者が見出し語の一覧から探索できる点にある。一方で、組合せの可能性が増えるほど、運用が重くなり、語彙更新のコストも上がる。件名標目表は、統制語としての語形だけでなく、組合せ規則や参照の設計まで含めて、長期にわたる維持管理の技術になっていった。
+そして実務では、利用者が入力する語は必ずしも標目の形ではない。略語、古い用語、流行語、異表記、専門語と一般語のずれが常にあり、参照の整備や同義語展開が不可欠になる。件名標目法は「辞書のように引ける」ことを目指しつつ、利用者の言葉の変化を受け止める可変性も求められる。この緊張関係が、後にシソーラスや自動推薦といった補助技術を呼び込み、主題索引をより多層的な仕組みにしていく。
+
+### 4. 主題分析の理論化：分析・合成とファセットという考え方
+主題索引の精度を左右するのは、資料の「主題とは何か」をどう捉えるかである。主題分析（subject analysis）は、資料の内容を概念単位へ分解し、索引語や分類記号として再表現する営みだが、20世紀に入ると、その方法を理論として整理する動きが強まった。代表的なのが、主題を複数の側面（ファセット）に分けて扱うファセット分類法（faceted classification）である。S.R.ランガナタン（Ranganathan）は、主題を「人格・物質・エネルギー・空間・時間」といった基本ファセットで捉え、必要に応じて組み合わせることで、複合主題を無理なく表現できると考えた。
+ここで鍵になるのが、分析・合成（analytic-synthetic）という発想である。まず主題を分析して要素を取り出し、次に規則に従って合成し、秩序ある表現へ落とし込む。これにより、分類表をただ拡張して例外を増やすのではなく、規則性を保ったまま新しい主題へ追随できる。主題索引法が「表を覚える技術」から「主題を構造化する技術」へと重心を移していったのが、この時期の特徴である。
+主題分析が理論化されるにつれて、索引品質を左右する政策（ポリシー）の言語化も進んだ。どこまで多くの概念を付与するか（網羅性、exhaustivity）、どこまで細かな概念で付けるか（特定性、specificity）、主題の中心と周辺をどう見分けるか、といった判断は、個人の経験則だけでは共有しにくい。図書館や情報サービスが協同で目録を作り、データを共同利用するようになると、索引付けの揺れはそのまま検索の揺れになる。主題分析は、分類表や件名標目表を使うための「読み解き方」を提供し、実務者教育の中核となった。主題を「体系」と「語彙」のどちらへ落とし込むにせよ、その前段の分析が弱ければ、どの方式でも品質は上がらないという認識が、この分野を支えている。
+もう一つ、主題分析は「主題そのもの」と「資料の形態・目的」を切り分ける視点も育てた。例えば同じ「歴史」の資料でも、研究書なのか入門書なのか、統計なのか地図なのか、児童向けなのか、といった差は利用者の探し方を大きく変える。分類表や件名標目表の中には、形式区分（form/genre）や対象読者に関わる要素を扱う仕組みがあり、主題索引は「何について」だけでなく「どんな資料か」という入口も整えてきた。デジタル時代においても、全文検索は内容語を拾える一方で、資料の性格や利用目的までは自動的に表しにくい。主題分析が培ってきた切り分けの技術は、検索結果を理解し、適切に絞り込むための基盤として生き続けている。
+
+### 5. 統制語彙とシソーラス：関係を設計して検索の一貫性を作る
+件名標目が語形の統一と参照で入口を整えるのに対し、シソーラス（thesaurus）は、語と語の関係そのものを明示的に設計して、検索と索引の一貫性を高める。ここで用いられる語彙は統制語彙（controlled vocabulary）と呼ばれ、同義語を束ね、上位語・下位語・関連語の関係を定めることで、利用者の検索語と索引語のずれを吸収する。索引側では、資料へ付与する語（ディスクリプタ）を統制し、検索側では、より広い概念へたどる・より狭い概念へ絞るといった探索行動を支える。
+専門分野で象徴的なのが医学件名標目表（MeSH）である。医学領域は用語の増殖が速く、薬剤名・疾患名・検査法などが継続的に更新されるため、語彙の管理がそのまま検索品質に直結する。統制語彙とシソーラスの整備は、情報検索が「キーワードを思い付く能力」だけに依存しないようにし、知識組織化（Knowledge Organization）の中核として位置づけられていく。件名付与やシソーラス運用の実務は、単なる付与作業ではなく、語彙の設計・更新・評価を含む運用の技術へ広がっていった。
+シソーラスの本質は、語のリストではなく、語の関係の設計図である。上位・下位・関連の関係に加え、採用語／非採用語の管理、適用範囲注記（scope note）による意味の確定、同音異義語の識別、場合によっては多言語対応など、語彙を「検索インターフェース」として機能させるための工夫が含まれる。さらに、同じ統制語彙でも、文献データベースでは索引付与のルールが厳密に運用され、図書館目録では利用者の探索行動を想定してやや広めの付与を行う、といった差も生まれる。統制語彙は万能ではないが、自由語だけでは失われやすい「概念の一貫性」を保存し、分野の記憶装置として働く点に価値がある。
+実務的には、シソーラスの関係はしばしばBT/NT/RT（上位／下位／関連）やUF（非採用語）といった形で運用され、語の追加・統合・分割を行う編集体制が品質を左右する。語彙が成長すると、階層が単純な木ではなく、多重の上位関係（複数の親）を持つ場合も増え、分類表と同様に「世界観」と「更新」の問題が生じる。さらに、利用者が自然に使う語と統制語が乖離すると、統制語彙は検索の障壁にもなり得るため、参照語の充実や、自動の語彙正規化（同義語展開、表記ゆれ吸収）などの補助が重要になる。統制語彙は、厳密さと使いやすさの間で設計される、社会的なインフラなのである。
+
+### 6. 戦後の情報爆発と座標索引：抄録・索引誌からキーワード検索へ
+第二次世界大戦後、科学技術情報の量は急増し、抄録誌・索引誌などの二次資料が膨張した。従来の分類や件名標目は、主題を一定の形式で「前もって」組み立てておく方式（事前結合、pre-coordinate）として発達してきたが、増え続ける主題をすべて事前に用意するのは難しい。そこで注目されたのが、語を部品として付与し、検索時に組み合わせて主題を構成する方式（事後結合、post-coordinate）である。座標索引（coordinate indexing）はその代表的な考え方で、資料には複数の語を独立に与え、利用者は必要な語をAND/ORで組み合わせて検索する。
+この流れの中で、KWIC索引（Keyword in Context）は「文脈付き用語索引」として、語が現れる前後の文脈を示し、同形異義語の判別や用法の把握を助けた。コンピュータがまだ高価だった時代でも、印刷物として大量のキーワード索引を生成できる点が魅力で、情報爆発に対する現実的な解として受け入れられた。自由語検索の柔軟さは魅力的だったが、同義語・表記揺れ・多義語の問題も同時に露呈し、統制語彙と自由語の「併用」という方向性がこの段階で強く意識されるようになる。
+座標索引と事後結合は、検索の主体を「編集者」から「利用者」へ移す面もあった。編集者が想定しなかった問いでも、語を組み合わせれば探索できる。しかし、語を増やしすぎるとノイズ（関係の薄い結果）も増える。逆に絞り込みすぎると漏れが増える。ここで情報検索の評価指標として、適合率（precision）と再現率（recall）の考え方が重視され、主題索引は「付与の正しさ」だけでなく「検索結果としての性能」で語られるようになった。分類・件名・キーワードのいずれも、単独では最適になりにくく、資料群と利用者群に応じて組み合わせ、索引ポリシーを設計する必要があるという実務的知見が、戦後の情報サービスの現場から蓄積されていった。
+また、機械検索の普及は、索引の「作り方」も変えた。索引語を付与してから探すのではなく、本文から語を抽出して転置インデックス（転置ファイル、inverted file）を作り、ブール検索で絞り込む、といった方法が一般化すると、分類記号や件名は「検索の起点」から「検索の精密化」へ役割を移す。引用索引や被引用関係の分析は、主題語彙とは別の入口（関係から探す入口）を提供し、主題索引が「内容の表現」だけでなく「文献間のつながり」と協調して動く場面を増やした。こうして主題索引は、単一の索引体系ではなく、複数の手掛かりを束ねる設計問題として成熟していく。
+
+### 7. 機械可読目録とOPAC：MARC化と典拠コントロールがもたらした再編
+目録がカードからコンピュータへ移行すると、主題索引は「表示」ではなく「データ構造」の問題になる。機械可読目録（MARC）は書誌データを機械処理できる形で表現し、分類記号や件名標目、著者名などの要素をフィールドとして保持できるようにした。これによって、同じデータを紙の目録にもオンライン目録にも変換でき、検索の入口は飛躍的に増える。OPAC（オンライン公共アクセス目録／オンライン目録）は、分類や件名を「一覧として見る」だけでなく、検索語と結び付けて「探索として使う」環境を一般化した。
+このとき決定的に重要なのが典拠コントロール（authority control、典拠管理）である。著者名や団体名と同様に、件名標目も表記を統一し、参照を管理しなければ、データベース検索は分断される。オンライン化は、件名・分類・キーワードを横断して検索する体験を生んだ一方で、統制が不十分な語彙はすぐに検索漏れを生むことも明らかにした。主題索引は、紙の目録で「見やすく並ぶ」こと以上に、データとして「揺れなく結び付く」ことが要求されるようになった。
+さらにオンライン検索は、主題索引の役割分担を変えた。紙の時代には、分類や件名は「入口の一覧」として機能し、利用者は目録カードの束をめくりながら発見していく。OPACでは、検索窓に語を入れる行為が中心になり、分類や件名は検索結果の絞り込みや関連提示へ回ることが増えた。これに対応して、分類記号から上位概念へ辿れるリンク、件名の階層や関連語の展開、さらには「主題ファセット」としてのナビゲーションが設計される。機械可読化は、主題索引を紙面上の並びから解放する一方で、データの粒度・構造・関係づけを設計できなければ、検索体験は改善しないという新しい課題を突き付けたのである。
+加えて、インターネット検索の体験が一般化すると、図書館の検索も「すぐ見つかる」ことが期待されるようになる。そこで、目録データに加え、目次・要旨・全文、利用者タグ、推薦情報などを統合したディスカバリーサービスが普及し、検索結果の関連度順表示やファセット絞り込みが当たり前になった。この環境では、件名や分類は「高品質な特徴量」として、検索語に現れない概念を補う役割を持つ。例えば、利用者が曖昧な語で探しても、典拠コントロールされた件名があれば同義語展開や関連語提示ができ、分類の階層があれば領域の見通しを与えられる。主題索引は、検索アルゴリズムの背後で、説明可能な形で検索体験を支える装置として再評価されている。
+
+### 8. 日本の主題索引の展開：NDCと国立国会図書館件名標目表（NDLSH）
+日本では、日本十進分類法（NDC）が公共図書館・学校図書館・大学図書館に広く浸透し、配架と請求記号を支える共通基盤となった。NDCは改訂を重ねながら学問の変化を取り込み、総記の中の図書館情報学領域でも、情報資源の組織化やデジタル化の進展に応じて細分が整えられてきた。一方、件名の側では、国立国会図書館件名標目表（NDLSH）が代表的な統制語彙として整備され、目録作成と検索サービスの基盤を担う。NDLSHは国内の出版物・研究動向に合わせた語彙を提供しつつ、必要に応じて海外の件名標目表や専門語彙（LCSH、MeSHなど）との関係も意識される。
+日本語の主題索引では、漢字・仮名・カタカナ、外来語の表記、学術用語の訳語定着といった課題が避けられない。同じ概念が複数表記で流通し、時代によって用語が入れ替わるため、統制語彙の更新と参照設計が実務の要になる。さらに、分類記号（NDC）と件名（NDLSH）をどう役割分担させるかは、図書館種別や利用者層で最適解が変わる。日本の主題索引法の発展は、海外の標準を受容しながらも、日本語・日本の出版文化に適応させる試行錯誤の歴史でもあった。
+協同目録の仕組みが整うと、主題索引の共有は加速する。学術図書館では総合目録データベース（NACSIS-CAT）による共同作成・共同利用が進み、典拠の共有や索引方針のすり合わせが実務上の重要課題となった。日本目録規則（NCR）などの規則は、記述の標準化だけでなく、標目の選定や参照の扱いにも影響し、件名付与の品質を間接的に支える。また、利用者サービスの観点では、NDCの分類記号が学習指導要領や書店の棚づくりとも接点を持ち、公共図書館の「探しやすさ」と結び付いた。日本の主題索引は、学術情報流通と地域サービスという二つの現場の要請を受けながら、多層的に発達してきたと言える。
+近年は、OPACやディスカバリーの画面上で、NDCの階層ブラウズと件名検索を併置し、利用者が「棚の地図」と「語の入口」を行き来できるようにする工夫も増えた。学校図書館では、分類は配架の基盤として不可欠である一方、児童・生徒が使う語彙は大人の標目語彙とずれやすく、件名やキーワードの補助が重要になる。公共図書館でも、地域資料や行政資料のように標準語彙では拾いにくい資料群があり、ローカル件名や注記、独自の関連付けが行われる。こうした現場の工夫は、標準（NDC/NDLSH）を核にしつつ、利用者の言葉と地域の文脈へ寄り添うことで主題アクセスを実現する、日本の主題索引のもう一つの顔である。
+
+### 9. デジタル化と相互運用：メタデータ、クロスウォーク、Linked Dataへ
+デジタル化が進むと、主題索引は単一館の目録を超えて、異なるシステム間で「つながる」ことが求められる。ダブリンコア（Dublin Core）のようなメタデータ要素集合は、図書館以外の領域とも共通語で記述を共有するための枠組みを提供し、分野横断の情報流通を後押しした。ここで課題になるのが、分類記号・件名標目・キーワード・タグなど、異種の主題表現をどう対応付けるかである。クロスウォークは、その対応を手作業または規則で作る試みであり、単純な変換では表せない粒度差や概念差が議論の焦点となった。
+近年は、Linked Data（リンクト・データ）の枠組みの中で、語彙そのものを識別子（URI）で扱い、関係を機械可読にする方向が強まる。書誌データモデルとしてのBIBFRAME（Bibliographic Framework）は、従来のレコード中心から、作品・実体・関係へと表現を再編し、主題も外部語彙と結び付けて再利用しやすくする。語彙公開ではSimple Knowledge Organization System（SKOS）が、シソーラスや分類表の関係表現に広く用いられ、主題索引は「館内の規則」から「Webで共有される知識資源」へと位置づけを変えつつある。
+この変化は、主題索引の「参照先」を広げた。従来は、分類表と件名標目表が館内で閉じていても運用できたが、Web上では他機関の語彙・典拠・外部データと接続する価値が大きい。たとえば同じ概念を表す語が、異なる語彙で別名になっていても、URIで同定し、SKOSのマッピング（完全一致・近似一致など）で関係を宣言できる。すると、利用者は単一のOPACを超えて、デジタルアーカイブ、論文データベース、博物館資料、行政のオープンデータなどを横断的に辿れる可能性が生まれる。主題索引は「検索のため」だけでなく、「データをつなぐため」のインフラへと役割を拡張している。
+その一方で、相互運用は「同じ言葉が同じ概念を指すとは限らない」という古い問題を、より厳密に突き付ける。分野ごとに概念の境界が違い、訳語の定着が揺れ、社会的文脈で意味が変わる以上、単純な一対一の対応付けでは不足する。だからこそ、語彙のバージョン管理、対応付けの根拠の記録、公開ライセンスの明確化、永続的識別子の運用といった、データ管理としての成熟が必要になる。主題索引法は、分類表・件名標目表・シソーラスといった伝統的資産を、Web時代の共有資源として維持するための「運用の技術」へ、もう一段広がりつつある。
+
+### 10. 自動主題付与とAI：拡張としての自動化、そして品質と責任
+資料がデジタルで生まれ、全文が検索できる時代になると、「人手で主題を付ける」ことのコストが相対的に高くなる。統計的手法や機械学習による自動主題付与は、まずは推薦（suggestion）として人を支援し、次第に大量処理の現場へ入り込んだ。近年の深層学習は、文章から主題を推定したり、分類記号や件名標目の候補を生成したりする精度を押し上げ、LLM（大規模言語モデル）も含めて、主題分析の「下書き」を高速に作れるようになっている。
+しかし、主題索引は単なるラベル付けではなく、語彙の統制、概念の粒度、利用者の探索行動への配慮、そして社会的価値判断（差別語・歴史的用語・政治的センシティブ性など）を含む。自動化が進むほど、どの語彙を正とするか、推薦の根拠を説明できるか、偏り（バイアス）や検閲の問題をどう監視するかが問われる。今後の主題索引法は、分類法・件名標目法・主題分析という伝統的技術を土台にしながら、統制語彙と自由語、手作業と自動化、ローカル実務と相互運用をどう折り合わせるかという設計問題として、さらに重要性を増していく。
+現実的な方向性は、人間と機械の役割分担を明確にし、品質保証の回路を用意することだろう。たとえば、機械は全文から候補語を大量に抽出し、統制語彙へ正規化した候補を提示する。人間は、資料の意図や利用者層を踏まえて採否を決め、必要なら新語の追加や参照関係の調整を提案する。索引付与の結果は、検索ログや利用者からのフィードバックで検証し、語彙側へ反映する。この循環が回れば、自動主題付与は「人手を置き換える」よりも、「主題語彙と主題分析を更新し続ける」ための加速装置になる。主題索引法の歴史が常にそうであったように、新技術は旧来の方式を無効化するのではなく、分類・件名・分析という基盤の上に、新しい入口と新しい統制の形を積み重ねていくはずである。
+もう一つの焦点は、生成系AIが持ち込む「もっともらしい誤り」への対処である。LLMは文章生成が得意である反面、根拠のない語を混ぜたり、語彙の階層関係を取り違えたりすることがある。主題索引でこれが起きると、検索の入口が誤って増え、利用者を誤誘導する。対策としては、付与語を統制語彙の範囲に制約する、典拠ファイルやシソーラスを参照して関係を検証する、重要な付与は人がレビューする、といったガードレールが必要になる。主題索引は、情報アクセスの公平性や学びの機会にも影響するため、単に効率化するのではなく、誤りや偏りに気づき、修正できる仕組みとセットで進化させることが求められる。
