--- a/0-総記/00-総記/007-情報学．情報科学/007.6-データ処理．情報処理/007.63-コンピュータシステム．ソフトウェア．ミドルウ…/007.63-コンピュータシステム．ソフトウェア．ミドルウ….md
+++ b/0-総記/00-総記/007-情報学．情報科学/007.6-データ処理．情報処理/007.63-コンピュータシステム．ソフトウェア．ミドルウ…/007.63-コンピュータシステム．ソフトウェア．ミドルウ….md
@@ -12,3 +12,93 @@
 
 ## 分野の歴史
 
+<!-- 
+アウトライン
+- 1. 「ソフトウェア」という発明：プログラム内蔵方式、アセンブラ／コンパイラ、ライブラリと再利用の萌芽
+- 2. バッチ処理から時分割へ：オペレーティングシステムの成立、入出力管理、ジョブ制御とファイルシステム
+- 3. OSの標準化とエコシステム：UNIXと移植性、PCの普及、GUI、POSIXとオープンソースの拡大
+- 4. ソフトウェア工学と大規模化：ソフトウェア危機、モジュール化、オブジェクト指向、テスト／品質保証、パッケージソフト
+- 5. ネットワーク化とWeb：TCP/IP、クライアント／サーバ、Webアプリ、ブラウザ、サーバサイドの基盤
+- 6. ミドルウェアの進化：DB／トランザクション、メッセージング、RPC／ORB、仮想化、コンテナ、マイクロサービスとDevOps
+- 7. 文字情報処理と日本語化：JIS／Shift_JIS／EUC-JPからUnicodeへ、入力方式、組版と国際化（i18n/l10n）
+- 8. 文書作成ソフトの系譜：ワープロ専用機、DTP、オフィス統合、共同編集、クラウド文書と業務アプリ
+- 9. 知識処理から学習へ：エキスパートシステム、機械翻訳、自然言語処理、深層学習、生成AIと応用の再編
+- 10. 画像処理と個人情報管理：画像認識とメディア処理、PIMとスマホ、プライバシー／セキュリティ、今後の課題
+-->
+
+この分野が扱う「コンピュータシステム／ソフトウェア／ミドルウェア／アプリケーション」は、ハードウェアの上に積み上がる層の全体像を指す。OSは資源を管理し、ミドルウェアは複数のプログラムや利用者が同じデータと機能を共有するための約束を提供し、アプリケーションはその上で具体的な仕事（文書作成、情報整理、翻訳、認識など）を形にする。本節では、計算機が研究室の装置から社会のインフラへ変わる過程を、層の分化と再統合という視点で辿り、関連するテーマ（エキスパートシステム、OS、文字・言語・画像処理、文書作成、個人情報管理）がどう交差してきたかを物語としてまとめる。
+この領域の変化は速いが、根底には「抽象化して共有する」「境界を定めて責任を分ける」という繰り返しがある。以後の章では、その繰り返しがどのように形を変えながら積み重なったかを追う。そして、その積み重ねが現代の開発実務にどう残っているかも意識する。
+
+### 1. 「ソフトウェア」という発明：プログラム内蔵方式と再利用の萌芽
+初期の計算機は、いま私たちが想像する「ソフトウェア」とは違う姿をしていた。配線やスイッチ、パンチカードの並びを変えることで処理手順を作り、同じ機械でも目的に応じて“組み替える”ことで動かした。ところが、プログラムをデータと同じように記憶装置へ置き、読み出して実行する「プログラム内蔵方式」が広がると、計算機は手順そのものを資産として蓄えられるようになる。ここで初めて、機械の外にある“手順”が、機械の内側で再生産できる対象になった。
+この変化は、アセンブラやコンパイラの発展と結びつく。機械語は速いが、人が扱うには過酷で、同じ処理でも機種ごとの命令差に縛られる。高水準言語は、処理の意図をより抽象的に記述し、移植や保守を容易にした。さらに、よく使う処理を部品として蓄えるライブラリの文化が生まれると、ソフトウェアは「一回書いて終わり」ではなく、「組み合わせて育てる」ものになっていく。こうして、ソフトウェアは単なる命令列ではなく、設計・実装・配布・利用の連鎖の中で価値を持つ“製品”へ近づいた。
+一方で、ソフトウェアの量が増えるほど、個別のプログラムだけでは機械を使いこなせなくなる。入出力装置の制御、記憶装置の割り当て、ジョブの順番、利用者の権限など、共通の土台が必要になる。ここから、OSやミドルウェアへ至る「共通基盤を層として切り出す」発想が形を取り始める。本分野の歴史は、まさにこの“層”を増やし、結び直し続けた歴史でもある。
+加えて、ソフトウェアを「配布して収益化する」慣行も、この層構造を後押しした。ハードウェアに付属する一体型の提供から、ソフトウェアを独立した商品として販売・契約し、更新とサポートを継続する形へ移ると、互換性やバージョン管理、マニュアル、教育といった周辺も含めて“システム”が成立する。OS・ミドルウェア・アプリケーションの分業は、技術の都合だけでなく、運用と流通の必然でもあった。
+この「層の分離」は、後にシステムソフトウェア（OSや言語処理系）と、利用者が目的のために使うアプリケーション（文書作成やPIM）を区別する視点を与える。どの層に機能を置くかは、性能、互換性、開発効率、責任分界に影響し、歴史の中で何度も揺れ動いてきた。
+
+### 2. バッチ処理から時分割へ：OSの成立と「共同利用」の技術
+計算機が高価で希少だった時代、利用の中心はバッチ処理だった。利用者はカードやテープに処理内容をまとめ、順番が来たら実行して結果を受け取る。ここで求められたのは、ジョブを途切れなく流すこと、入出力の待ち時間を隠すこと、機械の稼働率を上げることだった。スプーリングやジョブ制御、エラー処理の整備は、計算機を“工場のライン”のように回すためのOS機能として育つ。ファイルシステムも、単なる保存場所ではなく、データを共有し再利用するための約束事として重要性を増した。
+やがて、時分割（タイムシェアリング）が広がり、計算機は「順番に使う」から「同時に使う」へ向かう。端末から対話的に命令し、編集し、試し、直す。ここでは、応答性、保護、資源配分が中心課題になる。複数の利用者が一台の機械を“共存”させるには、プロセスという単位で実行を隔離し、メモリを守り、権限を管理しなければならない。OSは、単に便利な道具ではなく、計算資源の配分を司る「統治の仕組み」としての顔を強めた。
+この時期に形作られた基本要素――プロセス、スケジューリング、仮想記憶、ファイル、権限、端末、ネットワーク――は、後のPCやサーバ、スマートフォン、クラウドにまで引き継がれる。OSの歴史は、新しい装置が登場するたびに抽象化の層を積み増し、「安全に共有する」ためのルールを増補してきた歴史だと言える。
+対話的利用が広がると、OSの価値は「実行する」より「使いこなす」へ移る。コマンド解釈系（シェル）やユーティリティ群、エディタといった“周辺の道具”が整備され、作業の流れそのものがOSに組み込まれる。さらに、利用者ごとの権限、ログ、監査、隔離は、後のネットワーク時代に直結する安全基盤となった。
+たとえばファイルの命名規則や階層構造、アクセス権は、単なる便利機能ではなく、共有と隔離の設計そのものだった。後のネットワークファイル共有や分散ストレージも、ここで作られた概念を拡張して成立する。
+
+### 3. OSの標準化とエコシステム：UNIX、PC、GUI、そしてオープンソース
+OSが多様化すると、同じソフトウェアを別の環境へ持ち込むことが難しくなる。ここで大きな転機になったのが、移植性を重視したUNIXの系譜である。C言語とともに広まり、同じ概念（プロセス、ファイル、パイプ）をさまざまな機械の上に再現したことで、OSは「特定機種の専用品」から「共通の文化圏」へ広がった。標準化（POSIXなど）は、その文化圏を現実の互換性へ結び付け、周辺ツールやライブラリの流通を促した。
+同時に、PCの普及はOSを“個人の道具”へ変える。限られた資源の上で動く軽量なOS、次いでGUIを備えたOSが一般ユーザーに浸透し、アプリケーションの市場が爆発する。ここでOSは、ハードウェアを動かすだけでなく、ユーザー体験の中心となり、デバイスドライバや配布形態、互換性ポリシーを通じてエコシステム全体を形作る存在になった。
+さらに、インターネットの普及とともに、オープンソースは開発と配布の前提を変えた。ソースコードが共有され、バグ修正や機能追加が分散して進むと、OSは“完成品”よりも“進化し続ける基盤”として理解される。パッケージ管理やリポジトリ文化は、OSの外側にあるライブラリやミドルウェアをも取り込み、環境構築の再現性という新しい価値を生んだ。標準化とオープンソースは、競争しながらも共存し、ソフトウェアの土台を広げていく。
+スマートフォン以降は、OSがハードウェアの抽象化だけでなく、配布経路（アプリストア）や権限モデル、サンドボックスといった“統制の仕組み”を抱え込む。開発者はOSの提供するAPIの上で競い、利用者はOSの更新方針に影響を受ける。OS標準化は、互換性のための規格だけでなく、プラットフォーム運営という現実とも不可分になった。
+現代のOSは更新機構そのものを抱え、脆弱性修正を迅速に行うことでプラットフォーム全体の安全を維持する。権限分離、コード署名、サンドボックス、セキュアブートなど、信頼の根をどこに置くかが設計の中心になり、OSは「動かす」より「守る」役割を強めた。
+
+### 4. ソフトウェア工学と大規模化：作る技術から保つ技術へ
+ソフトウェアが社会の中核になるにつれ、作れば終わりでは済まなくなる。仕様変更、保守、障害対応、セキュリティ修正、互換性維持。こうした“運用される現実”に押され、ソフトウェア工学は大規模化の苦闘から生まれた。いわゆるソフトウェア危機は、単に人手不足の問題ではなく、複雑さが人の理解を超えていく問題だった。構造化設計やモジュール化は、巨大な塊を分割し、境界を明確にし、変更の影響を局所化するための手段として発達する。
+その後、オブジェクト指向やデザインパターンは、再利用と拡張の作法を整え、GUIやネットワークといった複雑な世界を扱う設計言語になった。一方で、設計の美しさだけでは品質は保証できない。テスト、静的解析、継続的インテグレーション、リリース管理、インシデント対応など、品質を“結果”ではなく“プロセス”として管理する技術が整備される。バージョン管理とチーム開発の定着は、ソフトウェアを個人の作業から組織の生産へ移行させた。
+パッケージソフトウェアの時代は、配布とサポートを含む“製品化”を進めたが、同時に、更新の遅さや環境差異の問題も抱えた。ここから、ネットワーク越しの更新やサービス化へと流れが向かう。大規模化の歴史は、技術の高度化と同時に、責任の所在と運用の仕組みを作り直してきた歴史でもある。
+また、開発プロセスは硬直した計画主導から、反復的に価値を届けるアジャイルへ揺れ動いた。依存ライブラリやOSSを前提にする現代では、脆弱性対応やサプライチェーン管理が品質の一部になる。ソフトウェア工学は、コードを書く技術だけでなく、依存関係と更新を運用する技術へも広がっている。
+大規模システムでは、障害をゼロにするより、障害を前提に早く検知し復旧する設計が重要になる。冗長化、フェイルオーバー、段階的リリース、機能フラグは、ソフトウェア工学が運用と結びついて進化した例である。
+
+### 5. ネットワーク化とWeb：クライアント／サーバから「常時接続のアプリ」へ
+ネットワークは、アプリケーションの前提を変えた。単体で完結するプログラムは、やがてサーバとクライアントに分かれ、データを共有し、更新し、複数人で同じ情報に触れるようになる。クライアント／サーバの時代は、データベースやトランザクション、認証といった共通の関心事を浮かび上がらせ、ミドルウェアの重要性を一気に高めた。ネットワーク障害や遅延、同時接続、整合性といった“分散の難しさ”が、システムの本質課題として登場する。
+Webの普及は、配布をさらに単純化する。ブラウザが共通の実行環境になり、アプリケーションはインストールではなくアクセスで届けられる。サーバ側の技術（Webサーバ、アプリケーションフレームワーク、セッション管理、キャッシュ、負荷分散）は、OSの上に新たな層を積み、利用者数の拡大に耐える仕組みへ進化した。やがてAPIが整備され、別のサービスと連携して機能を組み立てる発想が一般化する。
+この流れは「ソフトウェア＝配布物」から「ソフトウェア＝運用されるサービス」への転換でもある。更新は小刻みになり、機能は実験的に導入され、利用状況の計測が改善を導く。ネットワーク化は便利さをもたらした一方で、障害や攻撃の影響範囲を広げ、セキュリティやプライバシーを中心課題へ押し上げた。
+Webが普遍的な実行環境になった背景には、HTML/CSS/JavaScriptといった標準の浸透がある。同時に、Cookieやセッション、暗号化（TLS）、同一生成元ポリシーといった仕組みが、利便性と安全性の綱引きを受け持ってきた。Webアプリの歴史は、機能拡張と攻撃手法の競争が、標準と実装を鍛えてきた過程でもある。
+ブラウザはサンドボックスとしても進化し、スクリプトの権限やストレージの扱い、拡張機能のモデルを整えた。結果として、アプリはOSの上に直接インストールされるだけでなく、Web上の“いつでも更新されるUI”として提供され、SaaSという形で定着していく。
+さらにスマートフォンの普及は、Webとネイティブアプリの境界を行き来させた。プッシュ通知や位置情報、カメラなど端末機能を利用するために、APIと権限管理が整備され、オフラインでも動くキャッシュや同期の仕組みが一般化する。ネットワーク化したアプリは、単なる画面の配布ではなく、端末とクラウド、そして時にエッジが役割分担する複合体になった。
+
+### 6. ミドルウェアの進化：統合の層としてのDB、メッセージング、仮想化、コンテナ
+OSが計算資源を管理するなら、ミドルウェアはアプリケーション同士の“共同作業”を支える層だ。代表例がデータベースであり、同時更新と整合性、障害からの復旧、権限管理を一つの仕組みにまとめることで、業務アプリケーションの基盤になった。トランザクション管理やTPモニタは、複数の処理を一貫した単位として扱い、止めにくいシステムを現実に運用可能なものへした。メッセージングは、同期的な呼び出しだけでは吸収できない遅延や混雑を緩衝し、疎結合な構成への道を開く。
+分散システムが複雑になると、呼び出し規約やデータ形式、サービス発見、監視など“周辺の約束”が増える。RPCやORB、アプリケーションサーバは、それらの約束をまとめて提供し、開発者が業務ロジックへ集中できるようにした。一方で、基盤が厚くなるほどブラックボックス化や運用負荷も増える。そこで、仮想化は環境差異を吸収し、クラウドは資源調達の手間を減らした。さらにコンテナとオーケストレーションは、配布単位を小さくし、スケールと更新を自動化し、マイクロサービスの運用を現実にした。
+DevOpsやSREといった実務の潮流は、ミドルウェアを「導入して終わりの製品」ではなく、「観測し、改善し続ける仕組み」として捉え直した。ログ、メトリクス、トレーシング、構成管理、CI/CDは、ソフトウェアの層をさらに一枚増やすが、その目的は複雑さを増やすことではなく、複雑さを制御可能にすることにある。
+マイクロサービス化が進むと、個々のサービスよりも「つなぎ方」が難しくなる。APIゲートウェイ、サービスメッシュ、設定配布、秘密情報管理、分散トレーシングなどは、通信と運用の横断的な関心事を再びミドルウェアとして束ね直した。ここでは、強い整合性だけでなく最終的整合性や冪等性といった、分散特有の作法が重要になる。
+さらに、クラウドではデータベースやキュー、分析基盤などがマネージドサービスとして提供され、ミドルウェアは“自前で運用するもの”から“利用して統合するもの”へ性格を変える。利用者側の課題は、可観測性とコスト、ベンダーロックイン、データ移行といった新しい現実へ移った。
+同時に、データ量の増大は“処理の基盤”を押し広げた。分散ストレージ、バッチ処理とストリーム処理、ETL/ELT、検索基盤などは、アプリケーションの内部にあったデータ処理を共通部品として外へ切り出し、組織全体で再利用できる形にした。ミドルウェアは計算とデータの流れを束ねることで、情報処理の中心的な役割を担うようになる。
+
+### 7. 文字情報処理と日本語化：コード、入力、組版、国際化の積み重ね
+文字情報処理は、OSやアプリケーションの歴史と並走している。アルファベット中心の環境では、比較的少ない文字集合を前提にできたが、日本語を含む多言語の扱いは、符号化・表示・入力・検索のすべてに影響する。日本語環境では、JIS系の規格や各種の符号化方式が整備され、互換性と実用性の間で折衷が重ねられた。異なる文字コードが混在すれば、文字化けや検索漏れが起き、ファイルの受け渡しが大きな摩擦になる。
+Unicodeの普及は、こうした摩擦を減らす大きな転機だった。文字集合を統合し、国際化（i18n）を前提にソフトウェアを設計する流れが強まる。しかし、統合は“終わり”ではない。正規化や結合文字、同形異字、絵文字、右から左へ書く言語など、表現の多様さは新しい課題を生む。入力方式（かな漢字変換やIME）の改良、フォントとレンダリング、禁則やルビなどの組版処理は、利用者の体験を左右する基盤として進化し続けた。
+また、文字はセキュリティとも結びつく。見た目が似た文字の混在、URLや識別子の偽装、ログや監査の読みにくさなど、文字表現の自由度は攻撃面にもなり得る。文字情報処理の歴史は、文化と言語の多様性を支えつつ、互換性と安全性をどう両立させるかという、地道な設計の積み重ねである。
+検索や全文処理の観点でも、文字は単なる符号ではない。正しい照合（大文字小文字、濁点、全半角）、単語境界のない日本語の分かち書き、形態素解析、表記ゆれの吸収は、情報検索や機械翻訳の品質に直結する。文字情報処理は、アプリケーションの見えない下支えとして、言語処理技術とも深く結び付いている。
+国際化は文字だけに留まらない。日付・時刻・通貨・単位、住所や人名の表記、縦書き・横書きの混在など、ローカルな常識をソフトウェアへ落とし込む必要がある。多言語対応は、UI設計とデータ設計の両面を鍛え、結果として“世界で動くアプリケーション”の基盤を作った。
+
+### 8. 文書作成ソフトウェアの系譜：ワープロからクラウド共同編集へ
+文書作成ソフトウェアは、コンピュータが日常に入り込む入口の一つだった。初期には、専用機や簡易な編集環境を通じて「清書を速くする」価値が前面に出る。やがてWYSIWYGの発想が広がり、画面上の見た目と印刷結果を近づけることで、文書作成は専門職だけの作業ではなくなる。DTPの普及は、フォント、レイアウト、画像の扱いを高度化し、文字情報処理や画像処理の技術が文書作成の中へ統合されていった。
+オフィススイートの時代には、文書・表計算・プレゼンテーションが連携し、ビジネスの標準作法がソフトウェアに埋め込まれる。テンプレート、スタイル、差し込み印刷、マクロといった機能は、単なる文章作成を超えて業務プロセスの自動化へ接続した。一方で、ファイル形式の互換性は長く課題であり、標準化やPDFの普及、オープンな形式の登場は、文書の長期保存と共有を支える要素になった。
+クラウドと常時接続は、文書作成を「個人の作業」から「共同の場」へ変える。リアルタイム共同編集、コメント、履歴管理、権限付与は、バージョン管理の考え方を一般利用者へ持ち込んだとも言える。いま文書作成ソフトは、単に文章を整える道具ではなく、知識の共有と意思決定を支える“協働基盤”として位置づけが変わっている。
+文書作成は、GUIだけでなく記述型の文化も育てた。TeX/LaTeXや各種マークアップは、再現性と差分管理に強く、学術・技術分野で支持された。近年はMarkdownの普及や自動組版、アクセシビリティ（見出し構造、代替テキスト）への要請が強まり、文書は「見た目」だけでなく「意味構造」を持つデータとして扱われるようになっている。
+一方で、マクロや添付ファイルを介した攻撃、文書の持ち出しといったリスクも増え、文書作成ソフトはセキュリティ機能や権限制御と不可分になった。共同編集の広がりは、文書を単なるファイルではなく、権限と履歴を伴う“共有資産”として管理する方向へ押し進めている。
+
+### 9. 知識処理から学習へ：エキスパートシステム、機械翻訳、生成AI
+エキスパートシステムは、知識を明示的に表現し、推論規則で結論を導くことで、専門家の判断を再現しようとした。医療診断や機器の故障診断などで注目され、知識ベースと推論エンジン、説明機能は、ソフトウェアが「なぜそう言えるのか」を語ろうとした重要な試みでもある。しかし、知識の獲得と更新が難しく、現場の暗黙知や例外処理、環境変化に追従しにくいという壁にぶつかる。ここから、統計的手法や機械学習へ軸足が移っていく。
+言語情報処理と機械翻訳は、その転換を象徴する分野だ。初期の規則中心の翻訳は、文法や辞書を精密に作り込むほど例外が増え、スケールに限界があった。大量の対訳データを使う統計的翻訳、さらにニューラルネットによる翻訳は、明示的な規則よりも“データに現れる傾向”を利用して品質を上げた。自然言語処理は、検索、要約、対話、文書分類などへ広がり、ソフトウェアのユーザーインターフェースそのものを変えていく。
+近年の生成AIは、文章やコード、画像を“それらしく”生成できることで、アプリケーションの作り方と使い方を揺さぶっている。便利さの一方で、誤りや幻覚、偏り、著作権、機密情報の取り扱いといった課題も同時に現れる。エキスパートシステムが「説明」を重視したように、これからの知識処理は、性能だけでなく、根拠・責任・運用を含む設計が問われる段階に入っている。
+学習中心のアプローチは強力だが、データの偏りや評価方法の難しさが常につきまとう。ベンチマーク、誤り分析、プライバシー保護、学習データの権利処理は、技術と社会をつなぐ実務になる。生成AIの応用も、単純な生成だけでなく、検索で根拠を補う（RAG）や、社内知識と接続するガードレール設計など、システムとしての統合が主戦場になりつつある。
+この統合には、学習と運用をつなぐMLOpsの考え方が欠かせない。モデルの再学習、性能劣化（ドリフト）の監視、推論基盤のスケール、説明可能性や監査ログの確保は、従来のソフトウェア工学に近い課題として現れる。知識処理は、再び「運用されるシステム」の文脈へ戻りつつある。
+さらに、生成AIをユーザー向け機能に組み込むと、UI/UX設計が再び重要になる。プロンプトの誘導、誤りの通知、引用や根拠の提示、拒否の説明など、対話の設計は品質の一部であり、アプリケーションとミドルウェアの境界をまたいで調整が必要になる。
+
+### 10. 画像処理と個人情報管理：認識技術の拡大と、個人データの時代
+画像処理は、計算機が扱う対象を数値や文字から、より豊かな表現へ広げてきた。画像の生成はコンピュータグラフィックスとして発達し、画像の理解はコンピュータビジョンとして発達する。初期は幾何学や特徴量に基づく手法が中心だったが、計算資源とデータの拡大、深層学習の普及により、認識は飛躍的に実用化された。顔認識や物体検出、文字認識、医用画像解析などは、生活と産業の中へ入り込み、画像は“記録”から“判断材料”へ変わりつつある。
+その一方で、画像は個人情報の塊でもある。撮影場所、時間、写り込み、行動履歴。スマートフォンとクラウドは、画像を自動で集め、整理し、検索できるようにしたが、それは同時に、漏えい時の影響を拡大する。個人情報管理（PIM）も、紙の手帳や名刺整理から、PCのアドレス帳・予定表、メール、そしてスマホの連絡先・カレンダー・写真・位置情報へと統合され、個人の生活を横断する情報基盤になった。同期とバックアップは便利だが、権限管理や暗号化、バックアップ方針、アカウント乗っ取り対策といった運用が欠かせない。
+個人データを扱う現場では、利便性のために集めた情報が目的外利用や漏えいにつながらないよう、最小権限、データ最小化、匿名化、監査といった原則が重要になる。画像認識は監視や差別の懸念とも隣り合わせであり、技術の精度だけでなく、使い方のルールと透明性が問われる。
+PIMの観点では、認証とアイデンティティ管理が鍵になる。複数端末の同期、二要素認証、パスワードマネージャ、シングルサインオンは、個人情報管理を“利便”と“防御”の両面から支える。個人データの保護は、技術だけでなく、利用者の理解と選択肢を含めた設計として成熟していく必要がある。
+実務では、データ分類、保持期間、削除への対応、同意管理、越境移転といった法令・規約対応が増え、ソフトウェアの設計に組み込まれる。プライバシーは後付けでは守れず、初期設計からの組み込み（Privacy by Design）が求められる。
+これからのコンピュータシステムとソフトウェアは、「できること」を増やすだけでなく、「守るべきもの」を増やし続ける。OS、ミドルウェア、アプリケーションは層として積み上がり、便利さと引き換えに複雑さを抱える。歴史が示すのは、抽象化と標準化、そして運用の知恵によって複雑さを制御してきたという事実である。次の時代もまた、画像や言語を扱う強力なソフトウェアを、社会の信頼の上にどう載せるかという設計問題として進んでいくだろう。その答えは、技術の進歩だけでなく、運用の手触りと利用者の納得を同時に満たす仕組みの設計にある。
